Update mass scan

--- a/Calculo_Parametros/Mass_Scan/massScan.ipynb
+++ b/Calculo_Parametros/Mass_Scan/massScan.ipynb
@@ -18,13 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./pt_miss_histogram_monojet_BMtoy_800GeV.csv',\n",
+       "['./pt_miss_histogram_monojet_BM_toy_500_GeV.csv',\n",
+       " './pt_miss_histogram_monojet_BM_toy_550_GeV.csv',\n",
+       " './pt_miss_histogram_monojet_BM_toy_600_GeV.csv',\n",
+       " './pt_miss_histogram_monojet_BM_toy_650_GeV.csv',\n",
+       " './pt_miss_histogram_monojet_BM_toy_700_GeV.csv',\n",
+       " './pt_miss_histogram_monojet_BM_toy_750_GeV.csv',\n",
+       " './pt_miss_histogram_monojet_BMtoy_800GeV.csv',\n",
        " './pt_miss_histogram_monojet_BMtoy_850GeV.csv',\n",
        " './pt_miss_histogram_monojet_BMtoy_900GeV.csv',\n",
        " './pt_miss_histogram_monojet_BMtoy_950GeV.csv',\n",
@@ -34,19 +40,19 @@
        " './pt_miss_histogram_monojet_BMtoy_1200GeV.csv']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "signalList = sorted(glob.glob(\"./pt*.csv\"))[4:] + sorted(glob.glob(\"./pt*.csv\"))[0:4]\n",
+    "signalList = sorted(glob.glob(\"./pt*.csv\"))[:6] + sorted(glob.glob(\"./pt*.csv\"))[10:14] + sorted(glob.glob(\"./pt*.csv\"))[6:10]\n",
     "signalList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,38 +66,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/codespace/.local/lib/python3.10/site-packages/scipy/optimize/_optimize.py:404: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
-      "  warnings.warn(\"Values in x were outside bounds during a \"\n",
-      "/home/codespace/.local/lib/python3.10/site-packages/scipy/optimize/_optimize.py:404: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
-      "  warnings.warn(\"Values in x were outside bounds during a \"\n"
+      "(array(0.5), [array(0.5), array(1.)], array(8.77505478e-47), [array(7.66604825e-59), array(9.07154491e-53), array(8.77505478e-47), array(5.87606194e-41), array(2.10843736e-35)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "poi_values1 = np.linspace(0.01, 2, 50)\n",
+    "Sig = pd.read_csv('./pt_miss_histogram_monojet_BMtoy_800GeV.csv')[\"counts\"]\n",
+    "Data = MJ_data + Sig\n",
+    "model1 = pyhf.simplemodels.uncorrelated_background(\n",
+    "    signal=list(.2*Sig), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
+    ") #creamos el modelo\n",
+    "\n",
+    "observations1 = np.concatenate((Data, model1.config.auxdata))\n",
+    "\n",
+    "obs_limit1, exp_limits1, (scan, results) = pyhf.infer.intervals.upper_limits.upper_limit(\n",
+    "observations1, model1, poi_values1, level=0.05, return_results=True\n",
+    "    )\n",
+    "CL = pyhf.infer.hypotest(\n",
+    "    1, observations1, model1,  return_expected = True, return_expected_set = True, return_tail_probs = True\n",
+    "    )\n",
+    "print(CL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n",
+      "(array(0.5), [array(0.5), array(1.)], array(0.), [array(0.), array(0.), array(0.), array(0.), array(0.)])\n"
      ]
     }
    ],
    "source": [
     "f = open(\"resultados.txt\", \"at\")\n",
-    "poi_values1 = np.linspace(0.01, 5, 50)\n",
+    "poi_values1 = np.linspace(0.01, 2, 50)\n",
     "\n",
     "for signal in signalList:\n",
+    "    Sig = pd.read_csv(signal)[\"counts\"]\n",
+    "    Data = MJ_data + Sig\n",
     "    model1 = pyhf.simplemodels.uncorrelated_background(\n",
-    "        signal=list(pd.read_csv(signal)[\"counts\"]), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
+    "        signal=list(Sig), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
     "    ) #creamos el modelo\n",
     "\n",
-    "    observations1 = np.concatenate((MJ_data + pd.read_csv(signal)[\"counts\"], model1.config.auxdata))\n",
+    "    observations1 = np.concatenate((Data, model1.config.auxdata))\n",
     "\n",
     "    obs_limit1, exp_limits1, (scan, results) = pyhf.infer.intervals.upper_limits.upper_limit(\n",
     "        observations1, model1, poi_values1, level=0.05, return_results=True\n",
     "    )\n",
     "    CL = pyhf.infer.hypotest(\n",
-    "        1, observations1, model1,  return_expected= True, return_expected_set=True, return_tail_probs = True\n",
+    "        1, observations1, model1,  return_expected = True, return_expected_set = True, return_tail_probs = True\n",
     "    )\n",
-    "    \n",
+    "    print(CL)\n",
     "    \n",
     "    f.write(\"================================================================\\n\")\n",
     "    f.write(\"Signal \" + signal[34:-4] + \"\\n\")\n",
@@ -113,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
