--- a/Calculo_Parametros/Mono_jet.ipynb
+++ b/Calculo_Parametros/Mono_jet.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "68kLOYKY1fQP"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "HTEPsaoG1fQS"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "UUcbku7D1fQU"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,11 +122,33 @@
         "    pvalue1 = pyhf.infer.hypotest(\n",
         "        1, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
         "    )[1][0]\n",
+        "    \n",
+        "    CL = pyhf.infer.hypotest(\n",
+        "        1, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
+        "    )\n",
+        "    \n",
         "    if abs(0.05 - pvalue1) < 1e-3:\n",
         "        print(abs(0.05 - pvalue1), i)\n",
         "        break\n",
         "\n",
         "print(\"p-value = \", pvalue1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(array(0.04937087), [array(0.04937087), array(1.)], [array(0.), array(0.), array(0.), array(0.), array(0.)])\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(CL)"
       ]
     }
   ],
