--- a/Wp_analysis/WpAnalysis.ipynb
+++ b/Wp_analysis/WpAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +222,75 @@
     "        μ (obs) = {resultsS_5_6_e[0]}\n",
     "        μ (exp) = {resultsS_5_6_e[1]}\n",
     "        p-value = {resultsS_5_6_e[2]}\n",
+    "        \n",
+    "      \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $\\mu + e$ analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upper limit (obs): μ = 0.0258\n",
+      "Upper limit (exp): μ = 0.0268\n",
+      "Upper limit (obs): μ = 0.3052\n",
+      "Upper limit (exp): μ = 0.3465\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultsS_3_8_comb = statisticalAnalysis(list(Data_e)+list(Data_mu), list(signal_e_Wp_3_8)+list(signal_mu_Wp_3_8), list(bkg_e)+list(bkg_mu), list(bkg_err_e)+list(bkg_err_mu))\n",
+    "resultsS_5_6_comb = statisticalAnalysis(list(Data_e)+list(Data_mu), list(signal_e_Wp_5_6)+list(signal_mu_Wp_5_6), list(bkg_e)+list(bkg_mu), list(bkg_err_e)+list(bkg_err_mu))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        \n",
+      "    W' 3.8 TeV     \n",
+      "        μ (obs) = 0.025803628080619517\n",
+      "        μ (exp) = 0.026760881410893684\n",
+      "        p-value = 3.3900425790077486e-110\n",
+      "    \n",
+      "    W' 5.6 TeV \n",
+      "        μ (obs) = 0.30522898734688514\n",
+      "        μ (exp) = 0.3465001099029279\n",
+      "        p-value = 8.576360020808504e-05\n",
+      "        \n",
+      "      \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "        \n",
+    "    W' 3.8 TeV     \n",
+    "        μ (obs) = {resultsS_3_8_comb[0]}\n",
+    "        μ (exp) = {resultsS_3_8_comb[1]}\n",
+    "        p-value = {resultsS_3_8_comb[2]}\n",
+    "    \n",
+    "    W' 5.6 TeV \n",
+    "        μ (obs) = {resultsS_5_6_comb[0]}\n",
+    "        μ (exp) = {resultsS_5_6_comb[1]}\n",
+    "        p-value = {resultsS_5_6_comb[2]}\n",
     "        \n",
     "      \"\"\")"
    ]
